--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,3 +32,24 @@ services:
       - db
     env_file:
       - ./.env
+
+  redis:
+    image: "redis:alpine"
+
+  celery:
+    build: .
+    command: celery -A exchange_rates worker -l info
+    depends_on:
+      - redis
+      - web
+      - db
+
+
+  celery-beat:
+    build: .
+    command: celery -A exchange_rates beat -l info
+    depends_on:
+      - redis
+      - web
+      - db
+      - celery
